# parallel-noise-reduction

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: audio_processing.cpp  audio_processing.hpp  fftw_memory.hh  lib.cpp  main.cpp  parallel_audio_processor.cpp  parallel_audio_processor.hpp  wav_file.cpp  wav_file.hpp
test/: CMakeLists.txt
test/source/: parallel-noise-reduction_test.cpp
